all of the nav looks good now

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,26 @@
-<header class="site-header">
+<!DOCTYPE html>
+<html lang="en">
 
-  <div id="header">
-    <nav>
-      <ul>
-        <li class="fork"><a href="{{site.baseurl}}/">Home</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/csse">CSSE</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/csp">CSP</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/csa">CSA</a></li>
-        <li class="fork"><a href="{{site.baseurl}}/blogs">Blogs</a></li>
-        <li class="title"><a href="{{ site.github.repository_url }}#readme">View On GitHub</a></li>
-      </ul>
-    </nav>
-  </div><!-- end header -->
-</header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+<style>
+  .buttonNav:hover{
+    background-color: navy;
+    opacity: .6;
+  }
+</style>
+<body  >
+  <ul style="padding: 20px; background-image:url(https://wallpapercrafter.com/sizes/2560x1440/46306-black-3d-abstract-cube-hd-4k-simple-background.jpg); width: 99%;">
+    <a href="{{site.baseurl}}/" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">Home</a>
+    <a href="{{site.baseurl}}/csse" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSSE</a>
+    <a href="{{site.baseurl}}/csp" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSP</a>
+    <a href="{{site.baseurl}}/csa" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSA</a>
+    <a href="{{site.baseurl}}/blogs" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">Blogs</a>
+    <a href="{{ site.github.repository_url }}#readme" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">View On GitHub</a>
+  </ul>
+
+</body>
+
+</html>
