--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,11 @@
 ---
-layout: default
+layout: base
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 
-      class="post-title p-name" itemprop="name headline">{{ page.title | escape }}
-      • {% include read_time.html -%}
-    </h1>
-
-    <p class="post-meta post-meta-title">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date: date_format }}
@@ -27,44 +23,16 @@ layout: default
             <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
             {%- if forloop.last == false %}, {% endif -%}
         {% endfor %}
-      {%- endif %}
-    </p>
-
-    {%- if page.description -%}
-      <h2>Description</h2>
-      {%- if site.html_escape.description -%}
-        <p class="page-description">{{ page.description | escape }}</p>
-      {%- else -%}
-        <p class="page-description">{{ page.description }}</p>
-      {%- endif -%}
-    {%- endif -%}
-    
-
-    {% if page.categories.size > 0 and site.show_tags %}
-      <p class="category-tags"><i class="fas fa-tags category-tags-icon"></i></i> 
-      {% for category in  page.categories  %}
-        {%- assign prefix = category | slice: 0 -%}
-        {% if prefix == "C" %}
-          <a class="category-tags-link" href="{{site.baseurl}}/categories/cte#{{category|slugize}}">{{category}}</a>
-        {% else %}
-          <a class="category-tags-link" href="{{site.baseurl}}/categories/ap#{{category|slugize}}">{{category}}</a>
-        {% endif %}
-        {% unless forloop.last %}&nbsp;{% endunless %}
-      {% endfor %}
-      </p>
-    {% endif %}
-
-    {%- if page.toc -%}
-      {% include toc.html html=content %}
-    {%- endif -%}
-
+      {%- endif -%}</p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
-  {%- if page.comments -%}
-    {%- include utterances.html -%}
+
+  {%- if site.disqus.shortname -%}
+    {%- include disqus_comments.html -%}
   {%- endif -%}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
