--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -5,6 +5,13 @@
 {% seo %}
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- include google-analytics.html -%}
+  {%- endif -%}
+
+  {%- include custom-head.html -%}
 {% if site.remote_theme contains 'midnight' %}
   <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
 {% elsif site.remote_theme contains 'dinky' %}
