--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 <style>
   .buttonNav:hover{
-    background-color: navy;
-    opacity: .6;
+    border-radius: 10px;
+    background-color: rgba(65, 65, 155, 0.7);
   }
 </style>
 <body  >
