--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,9 @@
 <body  >
   <ul style="padding: 20px; background-image:url(https://wallpapercrafter.com/sizes/2560x1440/46306-black-3d-abstract-cube-hd-4k-simple-background.jpg); width: 99%;">
     <a href="{{site.baseurl}}/" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">Home</a>
-    <a href="{{site.baseurl}}/csse" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSSE</a>
+    <!-- <a href="{{site.baseurl}}/csse" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSSE</a> -->
     <a href="{{site.baseurl}}/csp" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSP</a>
-    <a href="{{site.baseurl}}/csa" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSA</a>
+    <!-- <a href="{{site.baseurl}}/csa" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">CSA</a> -->
     <a href="{{site.baseurl}}/blogs" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">Blogs</a>
     <a href="{{ site.github.repository_url }}#readme" class="buttonNav" style="padding: 12px; color: beige;text-decoration: none; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 24px;font-weight: 400;">View On GitHub</a>
   </ul>
